# fairy-chess

./: .gitignore  LICENSE  Notes.txt  fairy-chess.cabal  hie.yaml
App/Game/Chess/Fairy/: Main.hs  Server.hs
Lib/Game/Chess/Fairy/: BaseGame.hs  Datatypes.hs  Lib.hs  Samples.hs  Utils.hs
static/: home.html  play.html  rule.html
tests/: castling
